<resources>
    <string name="app_name">Euphony</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="inst2"> Tap on notify under Categories </string>
    <string name="inst3"> Tap on Importance (which would be set to urgent by default) </string>
    <string name="inst4"> Select High from the list
                          Now Restart the app for the changes to take place</string>
    <string name="nxt">&gt;</string>
    <string name="name_of_the_song">Name of the song</string>
    <string name="now_playing">Now Playing</string>
    <string name="x">X</string>
    <string name="who_sang_it">who sang it</string>
    <string name="dots">...</string>
    <string name="no_music">You don\'t have any music right now</string>
    <string name="presented_to_you_by">Presented to you by</string>
    <string name="you_haven_t_got_any_favourites">You Haven\'t Got any Favourites !!</string>
</resources>
