<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NavigationPanel"
    android:layout_width="match_parent"
    android:layout_height="64dip"
    android:background="@drawable/bg_gradient_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:id="@+id/song_image"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/default_image" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="5dp"
        android:visibility="gone"
        android:padding="2dp"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/close"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="#80000000"
        android:text="@string/x"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:visibility="gone" />


    <TextView
        android:id="@+id/song_title_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/song_image"
        android:duplicateParentState="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/name_of_the_song"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black">

        <requestFocus
            android:duplicateParentState="true"
            android:focusable="true"
            android:focusableInTouchMode="true" />
    </TextView>

    <TextView
        android:id="@+id/song_artist_nav"
        android:text="@string/who_sang_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/song_image"
        android:layout_below="@+id/song_title_nav"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:scrollHorizontally="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:duplicateParentState="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/licorice"
        android:layout_marginStart="5dp">

        <requestFocus android:focusable="true" android:focusableInTouchMode="true"
            android:duplicateParentState="true" />
    </TextView>

    <ImageView
        android:visibility="gone"
        android:id="@+id/slide"
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        android:layout_toStartOf="@+id/controls"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:src="@drawable/down"/>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_toEndOf="@+id/song_artist_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

    <ImageButton
        android:id="@+id/previousbutton_not"
        android:layout_gravity="center"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/playpausebutton_not"
        android:background="@drawable/play_previous_icon"
        android:minHeight="0dp"
        android:minWidth="0dp" />

    <ImageView
        android:id="@+id/playpausebutton_not"
        android:layout_gravity="center"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/nextbutton_not"
        android:minHeight="0dp"
        android:minWidth="0dp" />


    <ImageButton
        android:id="@+id/nextbutton_not"
        android:layout_gravity="center"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/play_next_icon"
        android:minHeight="0dp"
        android:minWidth="0dp"
        tools:ignore="UnknownId" />

    </LinearLayout>

</RelativeLayout>